wwr/styles/rafting.css
:root {
    --body-font: Arial, Helvetica, sans-serif;
    --devices-width: 840px;
    --devices-margin: 0 auto;
    --hbc: #004080;
    --htc: #ffcc00;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: var(--body-font);
}

/* HOME PAGE CSS BEGIN HERE 👇🏼 */
.home {
    width: var(--devices-width);
    margin: var(--devices-margin);
}

.home header {
    display: flex;
}

.home header nav {
    display: grid;
    grid-template-columns: 1fr 3fr;
}

.home .hero {
    display: grid;
    position: relative;
    width: 100%;
    max-width: 840px;
    margin: 0 auto;
    height: 327px;
    margin-bottom: 15px;
}

.home h1 {
    text-align: center;
    position: absolute;
    top: 1px;
    left: 77.735px;
    color: blue;
    text-shadow: -15px 0 15px rgba(0, 0, 0, 0.342),
        15px 0 15px rgba(0, 0, 0, 0.315);
    font-family: Arial, sans-serif;
}

.home .hero img {
    display: block;
    margin: 1px auto;
    box-shadow: -15px 0 15px rgba(0, 0, 0, 0.342),
        15px 0 15px rgba(0, 0, 0, 0.315);
    position: absolute;
    bottom: 1px;
    left: 36.5px;
}

.home .content {
    width: 100%;
    display: flex;
    gap: 8px;
    place-items: center;
}

.home .content div {
    width: 277px;
    border: 2px solid rgba(48, 48, 190, 0.829);
    background-color: #3b84af71;
}

.home .content p {
    padding: 0 3px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.home .content div img {
    width: 270px;
    height: 155px;
    margin-top: 0px;
}

.home article h2 {
    text-align: center;
    color: #0077be;
}

.home form {
    border: 1px solid rgba(22, 22, 22, 0.438);
    padding: 0 25px;
    width: 800px;
    margin: 0 auto;
    background-color: #e6f2ff;
    border-radius: 10px;
    box-shadow: 10px #6bb0e2;
    margin-bottom: 15px;
    box-shadow: 0 4px 30px rgb(0, 0, 0, 0.2);
}

.home form h2 {
    text-align: center;
    margin-bottom: 25px;
}

.home form .info {
    margin: 0 0 15px;
}

form .info {
    color: #0077cc;
    font-size: 18px;
    font-weight: bold;
}

form input {
    padding: 5px;
    margin-left: 15px;
    border: 1px solid blue;
    background-color: wheat;
    width: 250px;
    font-weight: bold;
}

.four select {
    border: 1px solid blue;
    padding: 4px;
    margin-left: 5px;
}

.one input,
.two input {
    margin-left: 21px;
}

.home form button {
    background-color: darkblue;
    color: white;
    width: 200px;
    height: 30px;
    display: block;
    margin: 0 auto;
    border-radius: 6px;
    border: none;
}

.home form button:hover {
    /* background-color: #0077cc; */
    /* box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff; */
    box-shadow: 0 0 20px #0077cc, 0 0 40px #0077cc;
    transform: scale(1.05);
}

.stories {
    margin: 20px 5px;
    padding: 10px;
}

.stories h2 {
    margin-bottom: 10px;
    text-align: center;
    color: #0077be;
}

#link {
    text-align: center;
    margin-top: 15px;
    height: 30px;
}

#link a {
    display: inline-block;
    width: 250px;
    height: 30px;
    border: 1px solid #000;
    text-decoration: none;
    padding-top: 6px;
    color: yellow;
    background-color: black;
    border-radius: 10px;
}

/* HOME PAGE CSS ENDS HERE 👆🏼 */

.about {
    font-family: var(--body-font);
    width: var(--devices-width);
    margin: var(--devices-margin);
}

/*  Everything about Header Tag begins here 👇🏼 */
header {
    display: grid;
}

header nav {
    width: 840px;
    margin-right: 20px;
    padding: 25px;
    padding-top: 1px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

ul {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    border: 1px solid black;
    width: 500px;
    height: 30px;
    place-items: center;
}

li {
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid black;
    width: 100%;
    height: 100%;
}

/* Everything about Header Tag ends here 👆🏼 */

/*  Everything about Main Tag begins here 👇🏼 */
.about .hero {
    position: relative;
}

.about .hero img {
    width: 100%;
    height: 550px;
    display: block;
}

.about h1 {
    position: absolute;
    top: 30px;
    width: 100%;
    padding: 1px;
    text-align: center;
    opacity: 0.7;
    background-color: var(--hbc);
    color: var(--htc);
    font-family: var(--body-font);
}

.about .hero article {
    position: absolute;
    width: 95%;
    height: 120px;
    bottom: 30px;
    left: 23px;
    border: 0.5px solid rgba(0, 0, 0, 0);
    padding: 10px 10px 20px 10px;
    background-color: rgba(0, 0, 0, 0.795);
    color: white;
    font-family: var(--body-font);
    font-weight: lighter;
    font-size: small;
}

.about .hero article img {
    float: right;
    width: 130px;
    padding: 0px 0px 1px 1px;
    height: 95px;
}

.about .hero article p {
    padding: 1px 0;
    width: 632px;
    height: 100px;
}

.about section {
    margin: 30px 0;
}

.about .gallery {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    place-items: center;
    margin: 15px;
    width: 97%;
}

.about .gallery figure {
    display: grid;
    place-items: center;
}

.about figcaption {
    font-size: smaller;
    font-weight: bold;
    text-align: center;
    width: 85%;
    margin: 5px;
}

.about section img {
    width: 120px;
    height: auto;
}

.about section p {
    margin: 15px 5px 10px 15px;
    padding-bottom: 10px;
}

.about .history {
    display: flex;
    margin: 10px;
}

.about .history img {
    width: 170px;
    height: 110px;
    margin: 15px;
}

.about h2 {
    background-color: var(--hbc);
    width: 100%;
    padding: 10px;
    text-align: center;
    color: var(--htc);
    font-family: var(--body-font);
}

/* Everything about Main Tag ends here 👆🏼 */

/* Everything about Footer Tag begins ends here 👇🏼 */
nav a img {
    padding-right: 30px;
}

footer {
    display: grid;
    grid-template-columns: 51% 49%;
    place-items: center end;
    text-align: left;
    border-top: 1px solid black;
    padding: 10px;
    font-family: var(--body-font);
    font-weight: bolder;
    font-size: medium;
}

footer p {
    margin: 15px 0 0 0;
    padding: 1px;
    padding-top: 3px;
    padding-bottom: 0px;
}

.socialmedia {
    display: flex;
    margin: 0;
    padding-top: 0px;
    justify-content: flex-end;
}

.socialmedia a {
    text-decoration: none;
    margin: 0;
    padding: 1px;
    width: 25%;
    height: 10%;
}

/* Contact Us Page Addition Start here 👇🏼 */

/* Address section styling begin here 👇🏼 */
.contact .address {
    background-color: #004080;
    color: #ffffff;
    font-family: 'Segoe UI', Arial, sans-serif;
    font-size: 1rem;
    padding: 32px;
    text-align: center;
    box-shadow: 0 4px 30px rgb(0, 0, 0, 0.2);
}

.contact .address h1 {
    font-size: 1.8rem;
    font-weight: bold;
    margin-bottom: 1rem;
    color: var(--htc);
}

.contact h2 {
    background-color: var(--hbc);
    width: 100%;
    padding: 10px;
    text-align: center;
    color: var(--htc);
    font-family: var(--body-font);
}

.contact .address p {
    margin: 10px;
    font-size: 18px;
}

/* Address section styling ends here 👆🏼*/
.contact .profile {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 15px;
}

.contact .profile figure {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 140px;
}

.contact .profile img {
    width: 100%;
    height: 100%;
}

.contact {
    width: 840px;
    margin: 0 auto;
}

.contact figcaption {
    text-align: center;
}

.content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 15px 50px 15px 0;
    height: auto;
}

.contact .map-div,
.contact form {
    width: 420px;
}

.contact iframe,
.contact form {
    width: 400px;
    padding: 10px;
}

.contact form {
    padding-right: 50px;
    width: 420px;
    display: grid;
    position: relative;
    background-color: #e6f2ff;
    color: #333;
    border-radius: 10px;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}

.contact form div,
.contact form fieldset {
    display: grid;
    justify-content: start;
    align-items: center;
    width: 370px;
}

.contact form label {
    color: var(--hbc);
    font-weight: bold;
}

.contact form input[type="text"],
.contact form input[type="email"],
.contact form textarea {
    background-color: #fff;
    color: #333;
    border: 1px solid #99ccff;
    border-radius: 6px;
}

.contact .name,
.contact .email {
    display: flex;
    margin-bottom: 10px;
}

.contact .name {
    justify-content: center;
    align-items: center;
}

.contact .email {
    justify-content: center;
    align-items: start;
    margin-bottom: 0;
}

.contact .name input,
.contact .email input {
    width: 100%;
    padding: 5px;
    margin-left: 40px;
}

.contact .message {
    display: flex;
    flex-direction: column;
    align-items: start;
}

.contact .message textarea {
    width: 100%;
    height: 100%;
    padding: 10px;
    font-size: medium;
}

.checkbox {
    display: grid;
    grid-template-columns: 0.2fr 3fr;
    width: 390px;
    height: 20px;
    font-size: small;

}

.checkbox input {
    width: 15px;
    margin: 0;
}

.contact .radio {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr 1fr;
    margin-bottom: 10px;
}

.contact .radio div {
    width: 230px;
    display: grid;
    grid-template-columns: .1fr 3fr;
    font-size: small;
}

.contact .radio p {
    grid-row-start: 1;
    grid-row-end: 4;
    color: #333;
    font-size: medium;
    font-weight: bold;
}

.contact .radio label {
    height: 20px;
}

.contact .radio input {
    width: 30px;
}

.contact button {
    background-color: #0077cc;
    color: white;
    position: absolute;
    width: 370px;
    height: 35px;
    bottom: 11px;
    left: 10px;
    border: none;
    border-radius: 6px;
}

.contact button:hover {
    /* background-color: darkblue; */
    box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
}

/* TRIPS PAGE CSS BEGINS HERE 👇🏼*/
.trips {
    width: var(--devices-width);
    margin: var(--devices-margin);
    font-family: var(--body-font);
}

.trips h1 {
    text-align: center;
}

.description {
    display: flex;
    gap: 8px;
}

.description div {
    border: 3px solid goldenrod;
    width: 272px;
}

.description div img {
    width: 100%;
    height: 148px;
    margin-bottom: 10px;
}

.description h3 {
    margin-bottom: 10px;
    text-align: center;
}

.description p {
    padding: 0 3px 0;
}

.trips table {
    border: 1px solid blue;
    margin-top: 20px;
}

thead {
    background-color: rgba(0, 0, 255, 0.836);
    color: wheat;
}

tbody {
    background-color: #81acd8d2;
}

#notes {
    background-color: rgb(190, 136, 136);
    border: 1px solid blue;
    border-top: none;
    padding: 5px;
}

#notes h3 {
    color: red;
    font-size: medium;
    margin-bottom: 10px;
}

#notes p {
    font-family: Georgia, 'Times New Roman', Times, serif;
    padding-left: 15px;
    margin-bottom: 5px;
}

.call {
    text-align: center;
    margin: 20px 0;
}

.call h4 {
    margin-bottom: 5px;
    font-weight: bold;
    font-size: large;

}

.call a {
    display: inline-block;
    width: 350px;
    height: 35px;
    border: 1px solid green;
    border-radius: 3px;
    font-size: larger;
    padding-top: 5px;
    background-color: #6bb0e2;
    text-decoration: none;
}

